# rust_opds

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  TODO  appveyor.yml  config.toml  schema.sql
ci/: before_deploy.ps1  before_deploy.sh
src/: db.rs  lib.rs  main.rs  opds.rs  web.rs
