[package]
name = "rust_opds"
version = "0.1.0"
authors = ["Giao Phan <casret@pobox.com>"]

[dependencies]
chrono = "0.4.4"
env_logger = "0.5.10"
failure = "0.1.1"
futures = "0.1"
hyper = "0.12"
lazy_static = "1.0.1"
log = "0.4"
r2d2 = "0.8.2"
r2d2_sqlite = "0.5.0"
regex = "1"
rusqlite = { version = "0.13.0", features = ["chrono"] }
tokio-fs = "0.1.1"
tokio-io = "0.1.7"
unrar ={ git = "https://github.com/casret/unrar.rs", rev = "daac3be" }
uuid = { version = "0.6", features = ["v4"] }
url = "1.7.0"
walkdir = "2"
xml-rs = "0.8"
zip = "0.4"
